--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "basiclightbox": "^5.0.4",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6"
+    "notiflix": "^3.2.6",
+    "slim-select": "^2.6.0"
   },
   "devDependencies": {
     "parcel": "^2.6.0",
